modules/quorum/quorum-nodes/eip.tf
# ---------------------------------------------------------------------------------------------------------------------
# EIP
# ---------------------------------------------------------------------------------------------------------------------

resource "aws_eip" "quorum-nodes-ct" {
  instance = "${aws_instance.quorum-nodes-ct.id}"
  vpc      = true
}
